@@ -4,7 +4,8 @@ Pint Changelog
 0.18 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Implement use of Quantity in the Quantity constructor (convert to specified units).
+  (Issue #1231)
 
 
 0.17 (2021-03-22)
